auth comp+routing

--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               "./node_modules/primeng/resources/themes/lara-dark-teal/theme.css",
               "./node_modules/primeng/resources/primeng.min.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
